--- a/app/sass/_settings.sass
+++ b/app/sass/_settings.sass
@@ -250,17 +250,17 @@ $header-font-color: #222222
 //$h6-font-size: rem-calc(20)
 $h5-font-size: rem-calc(20)
 $h4-font-size: rem-calc(20)
-$h3-font-size: $paragraph-font-size * 1.618
-$h2-font-size: $h3-font-size * 1.618
-$h1-font-size: $h2-font-size * 1.618
+$h3-font-size: rem-calc(32)
+$h2-font-size: rem-calc(52)
+$h1-font-size: rem-calc(84)
 //$h6-font-size: rem-calc(20)
 
 // We use these to control header size reduction on small screens
-$h1-font-reduction: 1.75rem
-$h2-font-reduction: .875rem
-$h3-font-reduction: rem-calc(6)
-$h4-font-reduction: rem-calc(0)
-// $h5-font-reduction: 0 !default;
+$h1-font-reduction: rem-calc(32)
+$h2-font-reduction: rem-calc(20)
+$h3-font-reduction: rem-calc(8)
+$h4-font-reduction: rem-calc(2)
+$h5-font-reduction: rem-calc(2)
 // $h6-font-reduction: 0 !default;
 
 // These control how subheaders are styled.
